--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -27,7 +27,7 @@
     <title>React App</title>
     <!-- Maps Script start -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-X9ZS86H8NwzLk3h7PQzGQiwMH35oP3g"
+      src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_API_KEY%"
       async
       defer
     ></script>
